--- a/templates/crafting-bench/sidebar.hbs
+++ b/templates/crafting-bench/sidebar.hbs
@@ -1,6 +1,6 @@
 <aside>
     <div>
-        <input type="text" placeholder="Search">
+        <input type="text" placeholder="Search" data-action="search" value="{{searchQuery}}">
     </div>
     {{#each craftingTree as |branch branchKey|}}
         <details
