Revert "Merge pull request #114 from Siggysaw/crafting-roll"
This reverts commit ffa35247da06514e981710abe6c258afa3cd43dd, reversing
changes made to bb0084919487457b395acf4ce7dec1caaa10cbd4.

--- a/templates/crafting-bench/attempt-roll.hbs
+++ b/templates/crafting-bench/attempt-roll.hbs
@@ -7,7 +7,7 @@
             <div>
                 Select a skill to roll against
                 <select name="selectedSkill">
-                    {{selectOptions craftable.system.crafting.mainRequirements selected=selectedSkill valueAttr="key" labelAttr="key"}}
+                    {{selectOptions craftable.mainRequirements selected=selectedSkill valueAttr="key" labelAttr="key"}}
                 </select>
             </div>
         </div>
