--- a/templates/actor/heading/status.hbs
+++ b/templates/actor/heading/status.hbs
@@ -112,10 +112,10 @@
         </td>
     </tr>
 </table>
-    <i data-tooltip="Short Rest" data-rest="short" class="header-icon fas fa-campground fakebutton"></i>
-    <i data-tooltip="Long Rest" data-rest="long" class="header-icon fas fa-bed fakebutton"></i>
-    <i data-tooltip="Custom Dice Roll" data-custom-roll class="header-icon fas fa-dice fakebutton"></i>
-    <i data-tooltip="Perks List" data-view-perks class=" header-icon fas fa-radiation-alt fakebutton"></i>
+    <i data-tooltip="{{localize 'FALLOUTZERO.Passives.short_rest.label'}}" data-rest="short" class="header-icon fas fa-campground fakebutton"></i>
+    <i data-tooltip="{{localize 'FALLOUTZERO.Passives.long_rest.label'}}" data-rest="long" class="header-icon fas fa-bed fakebutton"></i>
+    <i data-tooltip="{{localize 'FALLOUTZERO.Passives.custom_dice.label'}}" data-custom-roll class="header-icon fas fa-dice fakebutton"></i>
+    <i data-tooltip="{{localize 'FALLOUTZERO.Passives.perk_list.label'}}" data-view-perks class=" header-icon fas fa-radiation-alt fakebutton"></i>
 
 
 
