--- a/templates/actor/status/penalties.hbs
+++ b/templates/actor/status/penalties.hbs
@@ -1,23 +1,30 @@
 <table style="margin-top:0px;padding-top:0px;">
     <tr>
         <td class="status-info-label">
-            <p class="condition" data-condition="Food_and_Drinks">Hunger</p>
+            <p class="condition" data-condition="Food_and_Drinks">{{localize 'FALLOUTZERO.Passives.hunger.label'}}</p>
         </td>
         <td class="status-info-label">
-            <p class="condition" data-condition="Food_and_Drinks">Dehydration</p>
+            <p class="condition" data-condition="Food_and_Drinks">{{localize 'FALLOUTZERO.Passives.dehydration.label'}}</p>
         </td>
         <td class="status-info-label">
-            <p class="condition" data-condition="Fatigue_and_Exhaustion">Fatigue</p>
+            <p class="condition" data-condition="Fatigue_and_Exhaustion">{{localize 'FALLOUTZERO.Passives.fatigue.label'}}</p>
         </td>
          <td>
-            <p class="condition" data-condition="Fatigue_and_Exhaustion">Exhaustion</p>
+             <p class="condition" data-condition="Fatigue_and_Exhaustion">{{localize 'FALLOUTZERO.Passives.exhaustion.label'}}</p>
          </td>
         <td class="status-info-label" data-tooltip="10 Levels of Rads = Dead">
-            <p class="condition"><a class="content-link" data-link="" data-uuid="Compendium.arcane-arcade-fallout.conditions.Item.0KeR41HcadOH78KN" data-id="0KeR41HcadOH78KN" data-type="Item" data-pack="arcane-arcade-fallout.conditions" data-tooltip="Click for details.">Rad LVL</a></p>
+            <p class="condition">
+                <a class="content-link"
+                   data-link=""
+                   data-uuid="Compendium.arcane-arcade-fallout.conditions.Item.0KeR41HcadOH78KN"
+                   data-id="0KeR41HcadOH78KN"
+                   data-type="Item"
+                   data-pack="arcane-arcade-fallout.conditions"
+                   data-tooltip="Click for details.">{{localize 'FALLOUTZERO.Passives.rad_lvl.label'}}</a></p>
         </td>
         <td class="status-info-label"
             data-tooltip="Every 10 levels resets and gives 1 level radiation">
-            <p class="condition" data-condition="Irradiation">Irradiation</p>
+            <p class="condition" data-condition="Irradiation">{{localize 'FALLOUTZERO.Passives.irradiation.label'}}</p>
         </td>
     </tr>
     <tr>
