--- a/templates/item/item-background-sheet.hbs
+++ b/templates/item/item-background-sheet.hbs
@@ -29,7 +29,8 @@
           <input class="mediuminput" type="text" name="system.skill2.value" value="{{system.skill2.value}}" hidden />
           <input class="mediuminput" type="text" name="system.skill3.value" value="{{system.skill3.value}}" hidden />
           {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
-          {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}
+          {{#CheckLang 'en'}}{{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}{{/CheckLang}}
+          {{#CheckLang 'pt-BR'}}{{editor system.description_br target="system.description_br" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}{{/CheckLang}}
       </div>
     {{!-- Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
