--- a/templates/item/item-condition-sheet.hbs
+++ b/templates/item/item-condition-sheet.hbs
@@ -40,7 +40,8 @@
     <section class="sheet-body">
         {{!-- Description Tab --}}
         <div class="tab" item-description data-group="primary" data-tab="description">
-            {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}
+            {{#CheckLang 'en'}}{{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}{{/CheckLang}}
+            {{#CheckLang 'pt-BR'}}{{editor system.description_br target="system.description_br" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}{{/CheckLang}}
         </div>
         {{!-- Notes Tab --}}
         <div class="tab" item-notes data-group="primary" data-tab="notes">
