--- a/templates/item/item-trait-sheet.hbs
+++ b/templates/item/item-trait-sheet.hbs
@@ -28,13 +28,16 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
-    <div class="tab htmlfield" item-description data-group="primary" data-tab="description">
-        Wild Wasteland Enabled:
+      <div class="tab htmlfield" item-description data-group="primary" data-tab="description">
+          Wild Wasteland Enabled:
           <input type="checkbox" name="system.wildWasteland" {{checked system.wildWasteland}} /><hr />
-      {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
-      rollData prop. --}}
-       {{editor system.description target="system.description" button=true engine="prosemirror" collaborate=false}}
-    </div>
+          {{
+!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
+      rollData prop. --
+          }}
+          {{#CheckLang 'en'}}{{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}{{/CheckLang}}
+          {{#CheckLang 'pt-BR'}}{{editor system.description_br target="system.description_br" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}{{/CheckLang}}
+      </div>
     {{!-- Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
       {{> "systems/arcane-arcade-fallout/templates/item/parts/item-effects.hbs"}}
