--- a/templates/item/item-upgrade-sheet.hbs
+++ b/templates/item/item-upgrade-sheet.hbs
@@ -24,10 +24,11 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
-    <div class="tab htmlfield" item-description data-group="primary" data-tab="description">
-      {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
-      {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}
-    </div>
+      <div class="tab htmlfield" item-description data-group="primary" data-tab="description">
+          {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
+          {{#CheckLang 'en'}}{{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}{{/CheckLang}}
+          {{#CheckLang 'pt-BR'}}{{editor system.description_br target="system.description_br" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}{{/CheckLang}}
+      </div>
     {{!-- Upgrades Tab --}}
     <div class="tab upgrades" data-group="primary" data-tab="upgrades">
         <div>This section covers all permanent automatic upgrades which apply upon equipping the item. {{system._id}}</div>
