--- a/templates/perk/perk.hbs
+++ b/templates/perk/perk.hbs
@@ -4,7 +4,11 @@
             <img class="profile-img" src="{{ item.img }}" data-edit="img" title="{{ item.name }}" /><br />
             <div class="header-fields">
                 <h1 class="charname">
+                    {{#CheckLang 'en'}}
                     <input class="item-label" name="name" type="text" value="{{ item.name }}" placeholder="Name" />
+                    {{else}}
+                    {{localize (concat 'FALLOUTZERO.Perks.' item.name )}}
+                    {{/CheckLang}}
                 </h1>
             </div>
         </header>
