--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -19,7 +19,7 @@
     <nav class="sheet-tabs tabs" data-group="primary">
         <a class="item" data-tab="description">Description</a>
         <a class="item" data-tab="crafting">Crafting</a>
-        <a class="item" data-tab="upgrades" id="upgradesTab">Upgrades</a>
+        <a class="item" data-tab="upgrades">Upgrades</a>
         <a class="item" data-tab="effects">Effects</a>
     </nav>
 
@@ -36,6 +36,10 @@
                         <div>Load:</div><div><input type="number" name="system.load" value="{{ system.load }}" /></div>
                         <div>Cost:</div><div><input type="number" name="system.cost" value="{{ system.cost }}" /></div>
                         <div>CND:</div><div><input type="number" name="system.decay" value="{{system.decay}}" max="10" min="0" /></div>
+                        <div>Armor type:</div>
+                        <select name="system.armorType">
+                            {{selectOptions armorTypes selected=system.armorType valueAttr="id" labelAttr="label"}}
+                        </select>
                     </div>
                 </div>
                 <div class="grid-span-7 weapon-description">
@@ -49,15 +53,19 @@
             {{> "systems/arcane-arcade-fallout/templates/item/parts/item-crafting.hbs"}}
         </div>
         {{!-- Upgrades Tab --}}
-    <div class="tab" data-group="primary" data-tab="upgrades">
-        <fieldset>
-            <legend># of Slots</legend>
-            <input type="number" name="system.upgrade.slotCount" value="{{system.upgrade.slotCount}}" min="0" max="10" />
-        </fieldset>
-        <div>
-            {{#each system.upgrade.slots as |slot|}}
-                <div>{{slot.name}}</div>
-            {{/each}}
+        <div class="tab" data-group="primary" data-tab="upgrades">
+            <fieldset>
+                <legend># of Slots</legend>
+                <input type="number" name="system.upgrade.slotCount" value="{{system.upgrade.slotCount}}" min="0" max="10" />
+            </fieldset>
+            <div class="my-3">
+                <h4>Upgrades</h4>
+                <ul>
+                    {{#each system.upgrade.slots as |slot|}}
+                        <li>{{slot.name}}</li>
+                    {{/each}}
+                </ul>
+            </div>
         </div>
 
         {{!-- Effects Tab --}}
