--- a/templates/crafting-bench/attempt-roll.hbs
+++ b/templates/crafting-bench/attempt-roll.hbs
@@ -6,7 +6,7 @@
         <div>
             <div>
                 Select a skill to roll against
-                <select name="selectedSkill">
+                <select name="selectedSkill" data-select-skill>
                     {{selectOptions craftable.system.crafting.mainRequirements selected=selectedSkill valueAttr="key" labelAttr="key"}}
                 </select>
             </div>
