--- a/templates/select-upgrade/main.hbs
+++ b/templates/select-upgrade/main.hbs
@@ -1,5 +1,6 @@
 <div>
     <div>
+        <h3>{{item.name}}</h3>
         <fieldset>
             <legend>Attached ({{usedSlots}}/{{maxSlots}})</legend>
             <ul>
